<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imu_driver_ros2</name>
  <version>0.1.0</version>
  <description>IMU driver node for ROS2, supporting serial communication, binary protocol parsing, and attitude estimation (complementary filter / RK4)</description>
  <maintainer email="1637850405@qq.com">guofeng</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 核心依赖 -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>imu_driver_interfaces</depend>

  <!-- 第三方依赖 -->
  <build_depend>eigen</build_depend>
  <build_depend>libboost-system-dev</build_depend>
  <exec_depend>libboost-system</exec_depend>

  <!-- 测试依赖 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
